--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.KyKinhActivity"></activity>
+        <activity android:name=".activity.InitCamnangActivity"></activity>
+        <activity android:name=".activity.KyKinhActivity" />
         <activity android:name=".activity.NgayDSActivity" />
         <activity
             android:name=".activity.QuatationActivity"
