--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:maxSdkVersion="18" />
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/mother"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -82,7 +82,9 @@
             android:name=".activity.ChonTenActivity"
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity android:name=".activity.ThaiKiActivity" />
-        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.MainActivity">
+
+        </activity>
     </application>
 
 </manifest>
